# rust-axum-example

./: Cargo.toml  README.md  docker-compose.yml  migrate.sh
docs/postman/: Rust Axum.postman_collection.json
migrations/: 001_create_cars_table.up.sql  002_create_parts_table.up.sql
src/: build.rs  main.rs
src/app/: mod.rs
src/cache/: mod.rs
src/controllers/: cars.rs  mod.rs  parts.rs  utils.rs
src/db/postgres/: mod.rs
src/db/redis/: mod.rs
src/error/: mod.rs
src/models/: car.rs  part.rs
src/repositories/: car.rs  mod.rs  part.rs
src/router/: mod.rs
src/services/: cars.rs  parts.rs
src/tests/fixture/: part.rs
