[package]
name = "rust-axum-example"
version = "0.1.0"
edition = "2024"
authors = ["AJackTi <dtrong97vn@gmail.com>"]

[dependencies]
axum = { version = "0.7.7", features = ["macros"] }
serde = { version = "1.0.213", features = ["derive"] }
serde_json = "1.0.132"
tokio = { version = "1.41.0", features = ["full"] }
bb8-redis = "0.17.0"
redis = "0.27.5"
sqlx = { version = "0.8.2", features = [
    "runtime-tokio-rustls",
    "any",
    "postgres",
] }
tracing = "0.1.40"
tracing-subscriber = { version = "0.3.18", features = ["env-filter"] }
dotenv = "0.15.0"
tower = { version = "0.5.1", features = ["util"] }
tower-http = { version = "0.6.1", features = ["trace", "cors"] }
utoipa = { version = "5.3.1", features = ["axum_extras"] }
utoipa-axum = { version = "0.1.1" }
utoipa-swagger-ui = { version = "9.0.0", features = ["axum"] }
zip = "=2.3.0"
# utoipa = { version = "5.1.2", features = ["axum_extras"] }
# utoipa-axum = { version = "0.1.1" }
# utoipa-swagger-ui = { version = " 9.0.1", features = ["axum"] }
utoipa-redoc = { version = "5.0.0", features = ["axum"] }
utoipa-rapidoc = { version = "5.0.0", features = ["axum"] }
utoipa-scalar = { version = "0.2.0", features = ["axum"] }
anyhow = "1.0.91"
async-trait = "0.1"
thiserror = "1.0.65"
mockall = "0.11"
once_cell = "1.20.2"
hyper = "1.5.0"
reqwest = { version = "0.12.15", features = ["blocking"] }
